[Interim][0.0.12][BREAKING - TEMP MOD - See prior commit messages] Returned graph height to standard but with noted options not yet implemented to switch to tall graphs. Updated UI for always-shown buttons-example.json buttons to match other buttons. Moved sliders to top of control port buttons and other control port buttons default to collapsed - for ease in 4-ch data capture focused UI format. Plugins demo tested for updating waveforms with processed WF info - functional. Still has issue with first data capture not filling the viewable graph until next update. TODO.

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,9 @@
-header, main, footer {
+/* header, main, footer { */
   /* uncomment this when using the sidenav-fixed styling that will keep the
    * sidenav displayed when the window is wide enough
    */
   /*padding-left: 300px;*/
-}
+/* } */
 
 .flex-container {
   display: flex;
@@ -11,11 +11,11 @@ header, main, footer {
   justify-content: center;
 }
 
-.multipaneChart {
-  /*max-width: 100%;
+/*.multipaneChart {
+  max-width: 100%;
   min-width: 30%;
-  margin: 10px;*/
-}
+  margin: 10px;
+}*/
 
 .divMultiChartTitleArea {
   font-size: 1.5em;
@@ -201,9 +201,9 @@ p.custom-control-section .switch {
   height: 2.2rem;
   margin-bottom: 4px;
 }
-#capture_ui_status_indicators {
+/* #capture_ui_status_indicators {
 
-}
+} */
 #capture_ui_status_indicators .btn-small {
   height: 24px;
   line-height: 24px;
@@ -238,9 +238,9 @@ span#filesWrittenBadge.badge {
   margin: 6px;
   /*background-image: url('../assets/eagle-bear.jpg');*/ /* for fun */
 }
-#capture_ui_buttons .green {
-  /*opacity: 0.5;*/
-}
+/*#capture_ui_buttons .green {
+  opacity: 0.5;
+}*/
 #capture_ui_current_filename.row {
   margin: 6px;
   font-size: 1.2em;
@@ -522,7 +522,16 @@ path {
   display: inline-block;
   position: relative;
   width: 100%;
-  height: 560px; /* this relates to chart height when set to 500px instead of 300px and is explicitly set here until a better solution */
+  /*height: 560px;*/ /*560px;*/ /* this relates to chart height when set to 500px instead of 300px and is explicitly set here until a better solution */
+  padding-bottom: 33%; /* aspect ratio - update for graph init dims */
+  vertical-align: top;
+  /*overflow: hidden;*/
+}
+.svg-container-tall {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  height: 560px; /*560px;*/ /* this relates to chart height when set to 500px instead of 300px and is explicitly set here until a better solution */
   padding-bottom: 33%; /* aspect ratio - update for graph init dims */
   vertical-align: top;
   /*overflow: hidden;*/
